--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.3",
     "@reduxjs/toolkit": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
