--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.3",
     "@reduxjs/toolkit": "^1.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "framer-motion": "^10.17.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0"
